[gd_scene load_steps=4 format=2]

[ext_resource path="res://asset/sprite/albero.png" type="Texture" id=1]
[ext_resource path="res://Albero.gd" type="Script" id=2]
[ext_resource path="res://Foglia.tscn" type="PackedScene" id=3]

[node name="Albero" type="Node2D"]
position = Vector2( 92, 196 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Foglia_scene = ExtResource( 3 )

[node name="Sprite" type="Node2D" parent="."]

[node name="Radice" type="Sprite" parent="Sprite"]
position = Vector2( 0, 8 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 3

[node name="Radice2" type="Sprite" parent="Sprite"]
position = Vector2( 8, -72 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3

[node name="Radice3" type="Sprite" parent="Sprite"]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 1

[node name="Radice4" type="Sprite" parent="Sprite"]
position = Vector2( 8, -112 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 1

[node name="Radice6" type="Sprite" parent="Sprite"]
position = Vector2( 1, -152 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 2

[node name="RightPos" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="RightPos"]
position = Vector2( 12, -144 )

[node name="1" type="Position2D" parent="RightPos"]
position = Vector2( 20, -116 )

[node name="2" type="Position2D" parent="RightPos"]
position = Vector2( 24, -96 )

[node name="3" type="Position2D" parent="RightPos"]
position = Vector2( 16, -76 )

[node name="4" type="Position2D" parent="RightPos"]
position = Vector2( 12, -36 )

[node name="LeftPos" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="LeftPos"]
position = Vector2( -4, -172 )

[node name="1" type="Position2D" parent="LeftPos"]
position = Vector2( 0, -140 )

[node name="2" type="Position2D" parent="LeftPos"]
position = Vector2( 4, -104 )

[node name="3" type="Position2D" parent="LeftPos"]
position = Vector2( 0, -72 )

[node name="4" type="Position2D" parent="LeftPos"]
position = Vector2( -4, -52 )

[node name="Foglie" type="Node2D" parent="."]

[node name="Cadenti" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
